# SongPlayer

./: CMakeLists.txt  README.md
qml files/: CustomSlider.qml  PlaylistPanel.qml  main.qml
sources/: PlayerController.cpp  PlayerController.h  audiosearchmodel.cpp  main.cpp
